--- a/src/main/resources/templates/account/settings/security.html
+++ b/src/main/resources/templates/account/settings/security.html
@@ -6,36 +6,35 @@
 <body>
     <div th:replace="~{layouts/nav.html :: nav}" id="nav-placeholder"></div>
    
-    <!-- th:action="@{/user/edit/{productId}(productId=${productForm.id})}" th:object="${webUser}" th:field="*{username}" th:field="*{email}"-->
-    <form action="#"
-    method="POST" class="add-product-form">
+    <form th:action="@{/account/settings/security}" method="POST" th:object="${passwordForm}" class="add-product-form">
 
         <input type="hidden" name="_csrf" th:value="${_csrf.token}" id="_csrf">
-        <!-- <input type="hidden" th:field="*{id}"> -->
 
         <div class="input-field">
-            <h2>Old Password</h2><input type="text"  id="">
-            <!-- <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error-message">Name Error</div> -->
+            <h2>Old Password</h2><input type="password"  id="oldPassword" th:field="*{oldPassword}">
+            <button type="button" onclick="toggleOldPasswordVisibility()">Show</button>
+            <div th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}" class="error-message">Name Error</div>
         </div>
 
         <div class="input-field">
-            <h2>New Password</h2><input type="text"  id="">
-            <!-- <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error-message">Name Error</div> -->
+            <h2>New Password</h2><input type="password"  id="newPassword" th:field="*{newPassword}">
+            <button type="button" onclick="toggleNewPasswordVisibility()">Show</button>
+            <div th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}" class="error-message">Name Error</div>
         </div>
 
         <div class="input-field">
-            <h2>Repeat Password</h2><input type="text"  id="">
-            <!-- <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error-message">Name Error</div> -->
+            <h2>Repeat Password</h2><input type="password"  id="confirmPassword" th:field="*{confirmPassword}">
+            <button type="button" onclick="toggleConfirmPasswordVisibility()">Show</button>
+            <div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="error-message">Name Error</div>
         </div>
 
         <div class="input-field">
-            <button type="submit"> <span text="">Edit User</span></button>
-            <!-- <input type="submit" value="Save as Draft"> -->
+            <button type="submit"> <span text="">Change Password</span></button>
             <button type="button" class="add-product-button">Discard</button>
         </div>
 
 
-        <h2>Two-Factor Authentication (2FA)</h2>
+        <!-- <h2>Two-Factor Authentication (2FA)</h2> -->
     
         <h2>View LogIn History</h2>
     
@@ -47,6 +46,6 @@
     
     <div th:replace="~{layouts/footer.html :: footer}" id="footer-placeholder"></div>
 
-    <!-- <script th:src="@{/js/scriptProductForm.js}"></script> -->
+    <script th:src="@{/js/scriptSecurity.js}"></script>
 </body>
 </html>
