--- a/src/main/resources/templates/account/settings/security.html
+++ b/src/main/resources/templates/account/settings/security.html
@@ -37,6 +37,20 @@
         <!-- <h2>Two-Factor Authentication (2FA)</h2> -->
     
         <h2>View LogIn History</h2>
+        <table style="color: white;">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>IP Address</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="history : ${loginHistory}">
+                    <td th:text="${history.loginTime}"></td>
+                    <td th:text="${history.ipAddress}"></td>
+                </tr>
+            </tbody>
+        </table>
     
         <button type="button" th:attr="onclick='deleteUser()'">
             <span>Delete Account</span>
